@@ -1,5 +1,15 @@
 2003-04-04  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
 
+	* dccserver.c (handle_connection): add fflush(stderr).
+	(converse_with_client): here too.
+
+	* dccserver.c (get_file): add more verbose error messages in case
+	we already have the complete file, or more bytes than client is
+	willing to send.
+
+	* configure.ac: use errx if needed.
+	* errx.c (errx): new file.
+
 	* warnx.c (warnx): use fputs instead of fprintf.
 
 	* dccserver.c (get_file): allow files of size 0 to be resumed.
